--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.41.0",
     "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-import": "2.27.5",
     "husky": "8.0.3",
     "jest": "29.5.0",
