test(script): add flag --detectOpenHandles to test:e2e script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "description": "Nest boilerplate",
   "license": "UNLICENSED",
-  "author": "Samuel MARLHENS",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -23,7 +22,7 @@
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
     "test:watch": "jest --watch"
   },
   "dependencies": {
